--- a/myweb/templates/mydeployment.yaml
+++ b/myweb/templates/mydeployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: mydeploy
     spec:
       containers:
-      - image: vikas24775/webpage
+      - image: riteshalu/webpage
         name: webpage
         resources: {}
 status: {}
